--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Posts#show</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
+<h1>Post Contents</h1>
+<h3><%= "By: #{@user.username}" %></h3>
+<p><%= @post.entry %></p>
+
+<%= link_to 'Back', user_path(@user) %>
+<%= link_to 'Edit Post', edit_post_path(@post) %>
