--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<h1>Edit <%= @user.username %></h1>
+<%= render(partial: 'form') %>
+
+<%= render(partial: 'nav_bar') %>
