--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<h1>All FrondTank Users</h1>
+<% if @users.any? %>
+  <ul>
+    <% @users.each do |user| %>
+      <li>
+        <%= link_to user.username, user_path(user) %>
+      </li>
+    <% end %>
+  </ul>
+<% else %>
+  <h3>There are no fish in the FrondTank. Please create a user.</h3>
+<% end %>
+
+<%= render(partial: 'nav_bar') %>
