--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,2 +1,5 @@
-<h1>Comments#edit</h1>
-<p>Find me in app/views/comments/edit.html.erb</p>
+<h1>Edit Polyp</h1>
+<%= render(partial: 'form') %>
+
+<hr />
+<%= link_to 'Back', post_path(@comment.post_id) %>
