--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Comments#new</h1>
-<p>Find me in app/views/comments/new.html.erb</p>
+<h1>A Polyp for your Thoughts:</h1>
+<%= render(partial: 'form') %>
+
+<hr />
+<%= link_to 'Home', root_path %> |
+<%= link_to 'Back to User Profile', user_path(@comment.user_id) %> |
+<%= link_to 'Back to Post', post_path(@comment.user_id) %>
+
