--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,6 @@
 <h1>Create a New Post, <%= @user.username %></h1>
 <%= render(partial: 'form') %>
-
-<%= link_to 'Back', user_path(@user) %>
+<br />
+<hr />
+<%= link_to 'Home', root_path %> |
+<%= link_to 'Back to User', user_path(@user) %>
