--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,8 @@
     <% @users.each do |user| %>
       <li>
         <%= link_to user.username, user_path(user) %>
+        <%= button_to 'Edit User', edit_user_path(user), method: :get %>
+        <%= button_to 'Delete User', user_path(user), method: :delete, data: {confirm: 'Really delete this user?'} %>
       </li>
     <% end %>
   </ul>
@@ -11,4 +13,6 @@
   <h3>There are no fish in the FrondTank. Please create a user.</h3>
 <% end %>
 
-<%= render(partial: 'nav_bar') %>
+<hr />
+<%= link_to 'Home', root_path %> |
+<%= link_to 'New User', new_user_path %> 
