--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit Post</h1>
+<h1>Edit Thought Bubble</h1>
 <%= render(partial: 'form') %>
 
-<%= link_to 'Back', post_path(@post) %>
+<%= render(partial: 'post_nav_bar') %>
