--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,4 @@
 <h1>Edit <%= @user.username %></h1>
 <%= render(partial: 'form') %>
 
-<hr />
-<%= link_to 'Home', root_path %> |
-<%= link_to 'New User', new_user_path %> |
-<%= link_to 'Delete User', user_path(@user), method: :delete, data: {confirm: 'Really delete this item?'} %>
+<%= render(partial: 'nav_bar') %>
