--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Create a New User</h1>
+<h1>Create a New Frond</h1>
 <%= render(partial: 'form') %>
 
-<%= link_to 'Home', root_path %>
+<%= render(partial: 'nav_bar') %>
