--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,5 +1,4 @@
 <h1>Edit Polyp</h1>
 <%= render(partial: 'form') %>
 
-<hr />
-<%= link_to 'Back', post_path(@comment.post_id) %>
+<%= render(partial: 'comment_nav_bar') %>
