--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,15 +3,17 @@
   <p><%= @user.errors.full_messages.join(', ') %></p>
 <% end %>
 
-<%= form_for @user do |f| %> 
+<%= form_for @user, :url => users_path, :html => { :multipart => true } do |f| %> 
   <%= f.label :username %>
   <%= f.text_field :username %>
-
+  <br />
+  <%= f.file_field :avatar %>
+  <br />
   <%= f.label :age %>
   <%= f.number_field :age %>
-
+  <br />
   <%= f.label :description %>
   <%= f.text_area :description %>
-
+  <br />
   <%= f.submit %>
 <% end %>
