--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,7 @@
   <ul>
     <% @users.each do |user| %>
       <li>
+        <%= image_tag user.avatar.url(:medium) %>
         <%= link_to user.username, user_path(user) %>
         <%= button_to 'Edit User', edit_user_path(user), method: :get %>
         <%= button_to 'Delete User', user_path(user), method: :delete, data: {confirm: 'Really delete this user?'} %>
@@ -13,6 +14,4 @@
   <h3>There are no fish in the FrondTank. Please create a user.</h3>
 <% end %>
 
-<hr />
-<%= link_to 'Home', root_path %> |
-<%= link_to 'New User', new_user_path %> 
+<%= render(partial: 'nav_bar') %>
