--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<%= image_tag @user.avatar.url(:medium) %>
 <h1><%= @user.username %></h1>
 <h3> Age: <%= @user.age %></h3>
 <h3> About: <%= @user.description %> </h3>
@@ -15,9 +16,5 @@
   <h5>There are no posts in this tank.</h5>
 <% end %>
 
-<hr />
-<%= link_to 'Home', root_path %> |
+<%= render(partial: 'nav_bar') %> |
 <%= link_to 'Create Post', new_post_path(user_id: @user.id) %>
-<br />
-<%= link_to 'Edit User', edit_user_path(@user) %> |
-<%= link_to 'Delete User', user_path(@user), method: :delete, data: {confirm: 'Really delete this item?'} %>
