--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,7 +3,7 @@
   <p><%= @user.errors.full_messages.join(', ') %></p>
 <% end %>
 
-<%= form_for @user, :url => users_path, :html => { :multipart => true } do |f| %> 
+<%= form_for @user, :html => { :multipart => true } do |f| %> 
   <%= f.label :username %>
   <%= f.text_field :username %>
   <br />
