--- a/app/views/comments/_comment_nav_bar.html.erb
+++ b/app/views/comments/_comment_nav_bar.html.erb
@@ -1,4 +1,4 @@
-<hr />
-<%= link_to 'Home', root_path %>
-<%= link_to 'Back to User Profile', user_path(@comment.user_id) %>
-<%= link_to 'Back to Post', post_path(@comment.post_id) %>
+
+  <%= link_to 'Home', root_path %> |
+  <%= link_to 'Back to User Profile', user_path(@comment.user_id) %> |
+  <%= link_to 'Back to Post', post_path(@comment.post_id) %>
