--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,4 +1,9 @@
-<h1>A Polyp for your Thoughts:</h1>
-<%= render(partial: 'form') %>
-
+<header>
+  <h1>A Polyp for your Thoughts:</h1>
+</header>
+<div>
+  <%= render(partial: 'form') %>
+</div>
+<nav class="navbar-fixed">
 <%= render(partial: 'comment_nav_bar') %>
+</nav>
