--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,9 @@
-<h1>What's in your thought bubble, <%= @user.username %> ?</h1>
-<%= render(partial: 'form') %>
-
+<header>
+  <h1>What's in your thought bubble, <%= @user.username %> ?</h1>
+</header>
+<div>
+  <%= render(partial: 'form') %>
+</div>
+<nav class="navbar-fixed">
 <%= render(partial: 'post_nav_bar') %>
+</nav>
