--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,27 +1,34 @@
-<h1>Thought Bubble</h1>
-<%= image_tag @user.avatar.url(:medium) %>
-<h3><%= "By: #{@user.username}" %></h3>
-<p><%= @post.entry %></p>
-<%= button_to 'Edit Post', edit_post_path(@post), method: :get %>
-<%= button_to 'Delete Post', post_path(@post), method: :delete, data: {confirm: 'Really pop this thought bubble?'} %>
-
-<% if @comments.any? %>
-  <h4>Comments:</h4>
-  <ul>
-    <% @comments.each do |comment| %>
-      <li>
-        <%= link_to "#{comment.entry}", comment_path(comment.id) %>
-        <br />
-        <%= image_tag @user.avatar.url(:thumb) %><span>By: </span><%= link_to "#{@user.username}", user_path(comment.user_id) %>
-        <%= button_to 'Edit Comment', edit_comment_path(comment), method: :get %>
-        <%= button_to 'Delete Comment', comment_path(comment), method: :delete, data: {confirm: 'Really delete this polyp?'} %>
-      </li>
-    <% end %>
-  </ul>
-<% else %>
-  <h3>There are no polyps on this thought bubble.</h3>
-<% end %>
-
+<header>
+  <h1>Thought Bubble</h1>
+</header>
+<div>
+  <%= image_tag @user.avatar.url(:thumb) %>
+  <h3 class="inline-block">By: <%= link_to "#{@user.username}", user_path(@user.id) %></h3>
+  <h4><%= @post.entry %></h4>
+  <section class="inline-block"><%= button_to 'Edit Post', edit_post_path(@post), method: :get, class: 'btn' %></section>
+  <section class="inline-block"><%= button_to 'Delete Post', post_path(@post), method: :delete, data: {confirm: 'Really pop this thought bubble?'}, class: 'btn' %></section>
+  <hr />
+  <% if @comments.any? %>
+    <h4>Comments:</h4>
+    <ul>
+      <% @comments.each do |comment| %>
+        <li>
+          <h5><%= link_to "#{comment.entry}", comment_path(comment.id) %></h5>
+          <br />
+          <%= image_tag @user.avatar.url(:thumb) %>
+          <h6 class="inline-block">By: <%= link_to "#{@user.username}", user_path(comment.user_id) %></h6>
+          <br />
+          <section class="inline-block"><%= button_to 'Edit Comment', edit_comment_path(comment), method: :get, class: "btn" %></section>
+          <section class="inline-block"><%= button_to 'Delete Comment', comment_path(comment), method: :delete, data: {confirm: 'Really delete this polyp?'}, class: "btn" %></section>
+        </li>
+        <hr />
+      <% end %>
+    </ul>
+  <% else %>
+    <h3>There are no polyps on this thought bubble.</h3>
+  <% end %>
+</div>
+<nav class="navbar-fixed">
 <%= render(partial: 'post_nav_bar') %> |
 <%= link_to 'New Comment', new_comment_path(user_id: @user.id, post_id: @post.id) %>
-
+</nav>
