--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -7,6 +7,7 @@
   <%= f.label :username %>
   <%= f.text_field :username %>
   <br />
+  <%= f.label :avatar %>
   <%= f.file_field :avatar %>
   <br />
   <%= f.label :age %>
@@ -15,5 +16,5 @@
   <%= f.label :description %>
   <%= f.text_area :description %>
   <br />
-  <%= f.submit %>
+  <%= f.submit class: "btn" %>
 <% end %>
