--- a/app/views/users/_nav_bar.html.erb
+++ b/app/views/users/_nav_bar.html.erb
@@ -1,3 +1,3 @@
-<hr />
-<%= link_to 'Home', root_path %> |
-<%= link_to 'New User', new_user_path %>
+
+  <a><%= link_to 'Home', root_path %></a> |
+  <a><%= link_to 'New User', new_user_path %></a>
