--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,10 @@
-<h1>Create a New Frond</h1>
-<%= render(partial: 'form') %>
+<header>
+  <h1>Create a New Frond</h1>
+</header>
+<div>
+  <%= render(partial: 'form') %>
+</div>
 
+<nav class="navbar-fixed">
 <%= render(partial: 'nav_bar') %>
+</nav>
